feat: add swagger TJM-62
