# controllers/post.js
@@ -69,79 +69,6 @@ const getPosts = async (req, res) => {
   }
 };
 
-/**
- * @swagger
- *   /posts/{postId}:
- *     put:
- *       tags:
- *         - post
- *       summary: Update an existing post
- *       description: Update an existing post by Id
- *       operationId: updatePost
- *       security:
- *         - bearerAuth: []
- *       parameters:
- *         - name: postId
- *           in: path
- *           description: ID of post to return
- *           schema:
- *             type: string
- *           required: true
- *       requestBody:
- *         description:
- *           Update an existent post on the forum
- *         content:
- *           application/json:
- *             schema:
- *               type: object
- *               required:
- *                 - title
- *                 - content
- *               properties:
- *                 title:
- *                   type: string
- *                   description: title of the post
- *                   example: Matrix
- *                 content:
- *                   type: string
- *                   description: content of the post
- *                   example: Great movie!
- *                 bgImg:
- *                   type: string
- *                   description: background image of the the post
- *                   example: xxxx
- *                 hashtag:
- *                   type: string
- *                   description: tag post
- *                   example: Sci-fi
- *       responses:
- *         '200':
- *           description: Successful operation
- *           content:
- *             application/json:
- *               schema:
- *                 $ref: '#/components/schemas/Post'
- *         '400':
- *           description: Invalid request.
- *           content:
- *             application/json:
- *               examples:
- *                 Error:
- *                   description: Invalid request.
- *                   value:
- *                     message: Title and content cannot be empty!
- *         '401':
- *           description: Unauthorized author.
- *           content:
- *             application/json:
- *               examples:
- *                 Error:
- *                   description: Unauthorized author.
- *                   value:
- *                     message: Only author can update the post!
- *         '404':
- *           description: Not Found.
- */
 const updatePost = async (req, res) => {
   const { postId } = req.params;
   const { title, content, hashtag, bgImg } = req.body;
